# esp-hal-app

./: Cargo.toml
cli-flasher/: .gitignore  .lazy.lua  Cargo.toml
cli-flasher/src/: main.rs
device-wasm/: Cargo.toml  index.html
device-wasm/src/: lib.rs
esp-hal-app-framework/: .gitignore  .lazy.lua  Cargo.toml  rust-toolchain.toml
esp-hal-app-framework-macros/: Cargo.toml
esp-hal-app-framework-macros/src/: lib.rs
esp-hal-app-framework/.cargo/: config.toml
esp-hal-app-framework/src/: backlight.rs  display.rs  display_snapshot.rs  flash_map.rs  framework.rs  framework_web_app.rs  ft6x36_adapter.rs  gt9x_adapter.rs  improv_wifi.rs  jc8048w550c.rs  lib.rs  license.rs  log_ext.rs  mdns.rs  ntp.rs  ota.rs  rgb-display.rs  sdcard.rs  sdcard_spi.rs  sdcard_store.rs  settings.rs  slint_ext.rs  terminal.rs  touch.rs  ui_loop.rs  utils.rs  web_server.rs  wifi.rs  wt32_sc01_plus.rs
esp-hal-app-framework/src/static/: captive.html  config.html  device_wasm.js  device_wasm_bg.wasm
xtask/: Cargo.toml
xtask/src/: main.rs
