[package]
name = "cli-flasher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap            = { version = "4.5.24", features = ["derive", "env", "wrap_help"] }
espflash = "3.3.0"
log             = "0.4.22"
miette          = "7.4.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = "1.0.217"
serde_json = "1.0.138"
url = "2.5.4"

[build-dependencies]
espflash = "3.3.0"
miette          = "7.4.0"
clap            = { version = "4.5.24", features = ["derive", "env", "wrap_help"] }

