[package]
name = "device-wasm"
version = "0.1.0"
authors = ["yanshay <yanshay>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.77", features = ["Window", "Crypto"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }



getrandom = { version = "0.2.15", features = ["custom"] }
aes-gcm = { version = "0.10" }  # AES-GCM encryption/decryption
rand = { version = "0.8", default-features = false }
aes-gcm-siv = { version = "0.10", optional = true }
# serde = { version = "1.0.213", default-features = false, features = [ "derive", "alloc", ] }
# serde_json = { version = "1.0.132", default-features = false, features = [ "alloc", ] }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }

pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = { version = "0.10.8", default-features = false}
hmac = { version = "0.12.1", default-features = false}


[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
strip = true
